# rt-sentiment-api

./: Makefile  README.md  pyproject.toml  requirements.txt  start_api.py  start_api_mock.py
data/: sample_trustpilot.json  sample_twitter.json
deploy/helm/sentiment-api/: Chart.yaml  values.yaml
deploy/helm/sentiment-api/templates/: _helpers.tpl  deployment.yaml
docker/: Dockerfile.inference  Dockerfile.training  docker-compose.yml  prometheus.yml
docs/: api-reference.md  architecture.md  benchmark.md  contributing.md  deployment-guide.md  model-training.md
examples/: test_api.py  test_training.py
scripts/: benchmark.py  setup_mock_model.py
src/: __init__.py
src/app/: main.py  models.py  schemas.py
src/inference/: export.py  preprocess.py
src/training/: data.py  train.py  utils.py
test_models/: config.json  tokenizer.json  tokenizer_config.json  vocab.txt
tests/: test_app.py  test_latency.py
